--- a/environment.yml
+++ b/environment.yml
@@ -25,10 +25,11 @@ channels:
     - pytorch-nightly
 
 dependencies:
-    - python>=3.6
+    - python=3.8
     - pip>20.1
+    - cudatoolkit=10.2
     - numpy>=1.16.4
-    - pytorch>=1.4
+    - pytorch=1.8.1
     - future>=0.17.1
     - PyYAML>=5.1
     - tqdm>=4.41.0
@@ -54,3 +55,5 @@ dependencies:
         - horovod>=0.21.2
         - onnxruntime>=1.3.0
         - gym>=0.17.0
+        - jsonargparse[signatures]
+        - pytorch-lightning==1.3.2
