--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,7 +22,7 @@ repos:
       - id: end-of-file-fixer
       - id: trailing-whitespace
       - id: check-yaml
-      - id: pretty-format-json
+      #- id: pretty-format-json
 
   - repo: https://github.com/PyCQA/isort
     rev: 5.8.0
