--- a/setup.cfg
+++ b/setup.cfg
@@ -163,6 +163,8 @@ ignore_errors = True
 # whitelist
 [mypy-pytorch_lightning.trainer.evaluation_loop]
 ignore_errors = False
+[mypy-pytorch_lightning.trainer.connectors.logger_connector]
+ignore_errors = False
 
 # todo: add proper typing to this module...
 [mypy-pytorch_lightning.distributed.*]
