--- a/.github/workflows/docs-checks.yml
+++ b/.github/workflows/docs-checks.yml
@@ -19,7 +19,7 @@ jobs:
         with:
           # git is required to clone the docs theme
           # before custom requirement are resolved https://github.com/ammaraskar/sphinx-action/issues/16
-          pre-build-command: "apt-get update -y && apt-get install -y git && pip install -r requirements/docs.txt"
+          pre-build-command: "apt-get update -y && apt-get install -y git pandoc && pip install -r requirements/docs.txt"
           docs-folder: "docs/"
           repo-token: "${{ secrets.GITHUB_TOKEN }}"
 
