--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -59,13 +59,16 @@ exclude .yapfignore
 # Exclude pyright config
 exclude .pyrightconfig.json
 
+# Exclude submodules
+exclude .gitmodules
+exclude notebooks
+
 # Exclude Makefile
 exclude Makefile
 
 prune .git
 prune .github
 prune .circleci
-prune notebook*
 prune temp*
 prune test*
 prune benchmark*
