fix myst-parser warning blocking ci

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ docs/source/api
 docs/source/*.md
 docs/source/generated
 docs/source/*/generated
+docs/source/notebooks
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
