ignore mypy errors

--- a/setup.cfg
+++ b/setup.cfg
@@ -131,6 +131,10 @@ ignore_errors = True
 ignore_errors = True
 
 # todo: add proper typing to this module...
+[mypy-pytorch_lightning.loops.*]
+ignore_errors = True
+
+# todo: add proper typing to this module...
 [mypy-pytorch_lightning.metrics.*]
 ignore_errors = True
 
