--- a/setup.cfg
+++ b/setup.cfg
@@ -177,6 +177,8 @@ ignore_errors = True
 # todo: add proper typing to this module...
 [mypy-pytorch_lightning.utilities.*]
 ignore_errors = True
+[mypy-pytorch_lightning.utilities.cli]
+ignore_errors = False
 
 # todo: add proper typing to this module...
 [mypy-pl_examples.*]
