--- a/setup.cfg
+++ b/setup.cfg
@@ -45,6 +45,7 @@ exclude_lines =
 omit =
     pytorch_lightning/cluster_environments/*.py
     pytorch_lightning/utilities/distributed.py
+    pytorch_lightning/trainer/training_loop.py
     pytorch_lightning/tuner/auto_gpu_select.py
 
 
@@ -127,6 +128,10 @@ ignore_errors = True
 
 # todo: add proper typing to this module...
 [mypy-pytorch_lightning.loggers.*]
+ignore_errors = True
+
+# todo: add proper typing to this module...
+[mypy-pytorch_lightning.loops.*]
 ignore_errors = True
 
 # todo: add proper typing to this module...
