--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -56,6 +56,7 @@ repos:
     rev: 'v2.3'
     hooks:
       - id: vulture
+        name: Check dead code
 
   - repo: https://github.com/PyCQA/flake8
     rev: 3.9.2
