--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
-[submodule "notebooks"]
-	path = notebooks
+[submodule "_notebooks"]
+	path = _notebooks
 	url = https://github.com/PyTorchLightning/lightning-tutorials.git
 	branch = publication
