--- a/setup.cfg
+++ b/setup.cfg
@@ -45,6 +45,8 @@ exclude_lines =
 omit =
     pytorch_lightning/cluster_environments/*.py
     pytorch_lightning/utilities/distributed.py
+    pytorch_lightning/trainer/evaluation_loop.py
+    pytorch_lightning/trainer/predict_loop.py
     pytorch_lightning/tuner/auto_gpu_select.py
 
 
