--- a/.azure-pipelines/gpu-tests.yml
+++ b/.azure-pipelines/gpu-tests.yml
@@ -77,9 +77,9 @@ jobs:
         python -m coverage run --source pytorch_lightning -m pytest pytorch_lightning tests -v --junitxml=$(Build.StagingDirectory)/test-results.xml --durations=50
       displayName: 'Testing: standard'
 
-    #- bash: |
-    #    bash tests/special_tests.sh
-    #  displayName: 'Testing: special'
+    - bash: |
+        bash tests/special_tests.sh
+      displayName: 'Testing: special'
 
     - bash: |
         python -m coverage report
