--- a/setup.cfg
+++ b/setup.cfg
@@ -181,6 +181,8 @@ ignore_errors = True
 # todo: add proper typing to this module...
 [mypy-pytorch_lightning.utilities.*]
 ignore_errors = True
+[mypy-pytorch_lightning.utilities.argparse]
+ignore_errors = False
 [mypy-pytorch_lightning.utilities.cli]
 ignore_errors = False
 
