--- a/.github/workflows/events-nightly.yml
+++ b/.github/workflows/events-nightly.yml
@@ -5,6 +5,8 @@ name: Nightly events
 on:
   schedule:
     - cron: "0 0 * * *" # At the end of every day
+  # FIXME
+  push: {}
 
 # based on https://github.com/pypa/gh-action-pypi-publish
 jobs:
@@ -48,7 +50,7 @@ jobs:
       fail-fast: false
       matrix:
         python_version: [3.7]
-        xla_version: [1.6, 1.7, 1.8] # todo: , "nightly"
+        xla_version: ["1.6", "1.7", "1.8", "1.9"] # todo: , "nightly"
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -79,8 +81,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python_version: [3.6, 3.7, 3.8]
-        pytorch_version: [1.6, 1.7, 1.8, 1.9]
+        python_version: ["3.6", "3.7", "3.8", "3.9"]
+        pytorch_version: ["1.6", "1.7", "1.8", "1.9", "1.10"]
 
     steps:
       - name: Checkout
