--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -53,6 +53,7 @@ include pyproject.toml
 # Exclude build configs
 exclude *.yml
 exclude *.yaml
+exclude *.toml
 exclude *.jsonnet
 exclude .yapfignore
 
