update docs wrt issue 8105

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,13 @@
-sphinx>=4.0
-myst-parser
-nbsphinx>=0.8.5
-ipython[notebook]
-pandoc>=1.0
-docutils>=0.16
-sphinxcontrib-fulltoc>=1.0
-sphinxcontrib-mockautodoc
-https://github.com/PyTorchLightning/lightning_sphinx_theme/archive/master.zip#egg=pt-lightning-sphinx-theme
-sphinx-autodoc-typehints>=1.0
-sphinx-paramlinks>=0.5.1
-sphinx-togglebutton>=0.2
-sphinx-copybutton>=0.3
+# the default package dependencies
 
--r ../_notebooks/.actions/requirements.txt
+numpy>=1.17.2
+torch>=1.4
+future>=0.17.1  # required for builtins in setup.py
+tqdm>=4.41.0
+PyYAML>=5.1,<=5.4.1
+fsspec[http]>=2021.05.0, !=2021.06.0
+tensorboard>=2.2.0, !=2.5.0  # 2.5.0 GPU CI error: 'Couldn't build proto file into descriptor pool!'
+torchmetrics>=0.4.0rc1
+pyDeprecate==0.3.1
+packaging>=17.0
+typing-extensions  # TypedDict support for python<3.8
