--- a/.azure-pipelines/ipu-tests.yml
+++ b/.azure-pipelines/ipu-tests.yml
@@ -24,6 +24,9 @@ jobs:
       clean: all
 
     steps:
+    - script: mount -o remount,size=1G /dev/shm
+      displayName: "Increase shared memory"
+
     - script: tar -xvzf /opt/poplar/${{ variables.poplar_sdk }}.tar.gz
       displayName: "Extract Poplar SDK"
 
