Move it to last

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 # the default package dependencies
 
-pillow!=8.3.0  # TODO: Delete line after https://github.com/python-pillow/Pillow/issues/5571
 numpy>=1.17.2
 torch>=1.4
 future>=0.17.1  # required for builtins in setup.py
@@ -12,3 +11,4 @@ torchmetrics>=0.4.0
 pyDeprecate==0.3.1
 packaging>=17.0
 typing-extensions  # TypedDict support for python<3.8
+pillow!=8.3.0  # TODO: delete line after https://github.com/python-pillow/Pillow/issues/5571
