--- a/.github/workflows/events-nightly.yml
+++ b/.github/workflows/events-nightly.yml
@@ -80,7 +80,7 @@ jobs:
       fail-fast: false
       matrix:
         python_version: [3.6, 3.7, 3.8]
-        pytorch_version: [1.4, 1.5, 1.6, 1.7, 1.8, 1.9]
+        pytorch_version: [1.6, 1.7, 1.8, 1.9]
 
     steps:
       - name: Checkout
@@ -95,12 +95,6 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # for PT 1.3 and 1.4 we need to use CUDA 10.1
-      - run: |
-          cuda=$(python -c "print(10.2 if float(${{matrix.pytorch_version}}) > 1.4 else 10.1)" 2>&1)
-          echo "::set-output name=CUDA::$cuda"
-        id: extend
-
       - name: Publish CUDA to Docker Hub
         if: matrix.pytorch_version <= 1.8
         # publish master/release
@@ -109,7 +103,7 @@ jobs:
           build-args: |
             PYTHON_VERSION=${{ matrix.python_version }}
             PYTORCH_VERSION=${{ matrix.pytorch_version }}
-            CUDA_VERSION=${{ steps.extend.outputs.CUDA }}
+            CUDA_VERSION=10.2
           file: dockers/base-cuda/Dockerfile
           push: true
           tags: pytorchlightning/pytorch_lightning:base-cuda-py${{ matrix.python_version }}-torch${{ matrix.pytorch_version }}
