--- a/.azure-pipelines/gpu-tests.yml
+++ b/.azure-pipelines/gpu-tests.yml
@@ -106,8 +106,8 @@ jobs:
     - script: |
         set -e
         python -m pytest pl_examples -v --maxfail=2 --durations=0
-        bash pl_examples/run_examples-args.sh --trainer.gpus 1 --trainer.max_epochs 1 --data.batch_size 64 --trainer.limit_train_batches 5 --trainer.limit_val_batches 3
-        bash pl_examples/run_ddp-examples.sh --trainer.max_epochs 1 --data.batch_size 32 --trainer.limit_train_batches 2 --trainer.limit_val_batches 2
+        bash pl_examples/run_examples.sh --trainer.gpus=1
+        bash pl_examples/run_examples.sh --trainer.gpus=2 --trainer.accelerator=ddp
       env:
         PL_USE_MOCKED_MNIST: "1"
       displayName: 'Examples'
