Fix mypy in `utilities.parsing` (#8132)

--- a/setup.cfg
+++ b/setup.cfg
@@ -185,6 +185,8 @@ ignore_errors = True
 ignore_errors = False
 [mypy-pytorch_lightning.utilities.device_parser]
 ignore_errors = False
+[mypy-pytorch_lightning.utilities.parsing]
+ignore_errors = False
 
 # todo: add proper typing to this module...
 [mypy-pl_examples.*]
