--- a/dockers/base-conda/Dockerfile
+++ b/dockers/base-conda/Dockerfile
@@ -61,6 +61,7 @@ RUN apt-get update -qq --fix-missing && \
 ENV \
     PATH="/root/miniconda3/bin:$PATH" \
     LD_LIBRARY_PATH="/root/miniconda3/lib:$LD_LIBRARY_PATH" \
+    CUDA_TOOLKIT_ROOT_DIR="/usr/local/cuda" \
     MKL_THREADING_LAYER=GNU \
     MAKEFLAGS="-j$(nproc)" \
     # MAKEFLAGS="-j1" \
@@ -87,16 +88,16 @@ RUN conda update -n base -c defaults conda && \
 ENV \
     PATH=/root/miniconda3/envs/${CONDA_ENV}/bin:$PATH \
     LD_LIBRARY_PATH="/root/miniconda3/envs/${CONDA_ENV}/lib:$LD_LIBRARY_PATH" \
-    CUDA_TOOLKIT_ROOT_DIR="/usr/local/cuda" \
-    CUDA_INCLUDE_DIRS="/usr/include/cuda" \
+    # if you want this environment to be the default o \ne, uncomment the following line:
+    CONDA_DEFAULT_ENV=${CONDA_ENV} \
+    HOROVOD_CUDA_HOME="/usr/local/cuda" \
+    HOROVOD_BUILD_CUDA_CC_LIST=$TORCH_CUDA_ARCH_LIST \
     HOROVOD_GPU_OPERATIONS=NCCL \
     HOROVOD_WITH_PYTORCH=1 \
     HOROVOD_WITHOUT_TENSORFLOW=1 \
     HOROVOD_WITHOUT_MXNET=1 \
     HOROVOD_WITH_GLOO=1 \
-    HOROVOD_WITHOUT_MPI=1 \
-    # if you want this environment to be the default one, uncomment the following line:
-    CONDA_DEFAULT_ENV=${CONDA_ENV}
+    HOROVOD_WITHOUT_MPI=1
 
 COPY ./requirements/extra.txt requirements-extra.txt
 COPY ./requirements/test.txt requirements-test.txt
@@ -113,6 +114,7 @@ RUN \
 
 RUN \
     CUDA_VERSION_MAJOR=$(python -c "import torch ; print(torch.version.cuda.split('.')[0])") && \
+    echo $CUDA_VERSION_MAJOR && \
     # install DALI, needed for examples
     pip install --extra-index-url https://developer.download.nvidia.com/compute/redist nvidia-dali-cuda${CUDA_VERSION_MAJOR}0
 
